--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -70,13 +70,18 @@
   justify-content: space-evenly;
   text-decoration: none;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background: var(--color-secundary-dark);
 }
 
 @media (min-width: 700px) {
+  .teacher-item {
+    max-width: 100vw;
+  }
+
   .teacher-item header,
   .teacher-item footer {
     padding: 3.2rem;
@@ -91,13 +96,14 @@
     margin-left: 1.6rem;
   }
 
-  .teacher-item footer button {
+  .teacher-item footer a {
     width: 245px;
     font-size: 1.6rem;
     justify-content: center;
+    text-decoration: none;
   }
 
-  .teacher-item footer button img {
+  .teacher-item footer a img {
     margin-right: 1.6rem;
   }
 }
